--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="CSS/cursos.css">
     <link rel="stylesheet" href="CSS/videos.css">
     <link rel="stylesheet" href="CSS/planos.css">
+    <link rel="stylesheet" href="CSS/beneficios.css">
     <link rel="stylesheet" href="CSS/rodape.css">
     <link rel="stylesheet" href="CSS/form-newsletter.css">
 </head>
