--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="CSS/videos.css">
     <link rel="stylesheet" href="CSS/planos.css">
     <link rel="stylesheet" href="CSS/beneficios.css">
+    <link rel="stylesheet" href="CSS/chamada-youtube.css">
     <link rel="stylesheet" href="CSS/rodape.css">
     <link rel="stylesheet" href="CSS/form-newsletter.css">
 </head>
@@ -131,6 +132,30 @@
                     <p class="beneficio__texto">Aprender em DVD e revistinha de banca são coisas do passado! Estudar com um professor particular é bom, mas quem é o seu professor? A MusicDot te oferece a melhor aula, a qualquer hora.</p>
                 </li>
             </ul>
+        </section>
+
+        <section class="chamada__youtube">
+            <article class="chamada__youtube__canal youtube_informacao icone--youtube --largura-grande">
+                <h2 class="canal__titulo">Nosso canal no YouTube</h2>
+                <p class="canal__texto">Cursos online de Teclado, Piano, Canto, Violão, Guitarra, Teor
+                    ia Musical e mais!</p>
+                <a href="https://www.youtube.com/user/musicdotonline" class="canal__button botao" target="_blank">Ver Canal</a>
+            </article>
+
+            <article class="chamada__youtube__canal chamada__youtube--video1">
+                <a class="video__descricao" href="#">
+                    <h2 class="descricao__titulo">Aula de Canto para Iniciantes (dicas básicas)</h2>
+                    <p class="descricao__texto">Nessa aula a professora Anny Cee dá as primeiras dicas para você começar o seu estudo do Canto. </p>
+                </a>
+            </article>
+
+            <article class="chamada__youtube__canal chamada__youtube--video2">
+                <a class="video__descricao" href="#">
+                    <h2 class="descricao__titulo">Toque teclado em 10 minutos! (Aula de teclado para iniciantes)</h2>
+                    <p class="descricao__texto">Essa é a primeira aula do curso de teclado da MusicDot. Aqui você aprenderá a nomear todas...</p>
+                </a>
+            </article>
+
         </section>
     </main>
     <footer class="rodape container">
