--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="CSS/planos.css">
     <link rel="stylesheet" href="CSS/beneficios.css">
     <link rel="stylesheet" href="CSS/chamada-youtube.css">
+    <link rel="stylesheet" href="CSS/chamada-app.css">
     <link rel="stylesheet" href="CSS/rodape.css">
     <link rel="stylesheet" href="CSS/form-newsletter.css">
 </head>
@@ -156,6 +157,14 @@
                 </a>
             </article>
 
+        </section>
+
+        <section class="chamada__aplicativo">
+            <h2 class="aplicativo__titulo">Estude em qualquer lugar com o App</h2>
+            <p class="aplicativo__texto">Com o aplicativo da MusicDot você baixa as aulas para estud
+                ar offline e fazer os exercícios. Disponível para Android e iOS. Já é aluno? <strong class="texto-destaque">Baixe Já:</strong></p>
+                <a href="https://play.google.com/store/apps/details?id=br.com.musicdot&hl=en" class="aplicativo__button app__download--android  botao">Android</a>
+                <a href="https://apps.apple.com/br/app/musicdot/id1333842849" class="aplicativo__button app__download--ios botao">iOS</a>
         </section>
     </main>
     <footer class="rodape container">
